fix: add nowrap to navigation item

--- a/src/components/navigation/contextual/navigation-item/NavigationItemContextual.scss
+++ b/src/components/navigation/contextual/navigation-item/NavigationItemContextual.scss
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: space-between;
   gap: var(--spacing-30, 8px);
-
+  white-space: nowrap;
   cursor: pointer;
 
   background: none;
